@@ -38,7 +38,7 @@
     <artifactId>airavata</artifactId>
     <packaging>pom</packaging>
     <name>Airavata</name>
-    <version>0.19-SNAPSHOT</version>
+    <version>0.20-SNAPSHOT</version>
 
     <url>http://airavata.apache.org/</url>
     <inceptionYear>2011</inceptionYear>
@@ -77,12 +77,10 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <axis2.version>1.5.1</axis2.version>
         <derby.version>10.13.1.1</derby.version>
         <org.slf4j.version>1.7.25</org.slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <axiom.version>1.2.8</axiom.version>
-        <surefire.version>2.18.1</surefire.version>
+        <surefire.version>3.0.0-M4</surefire.version>
         <junit.version>4.12</junit.version>
         <curator.version>2.8.0</curator.version>
         <!--remove xmlbeans version -->
@@ -92,15 +90,12 @@
         <xpp5.version>1.2.8</xpp5.version>
         <xsul.version>2.10.7</xsul.version>
         <xsul5.version>1.2.7</xsul5.version>
-        <gpel.version>1.0.9</gpel.version>
         <atomixmiser.version>0.9.4</atomixmiser.version>
-        <jython.version>2.5.3</jython.version>
         <jersey.version>1.13</jersey.version>
         <cargo.version>1.3.1</cargo.version>
         <oa4mp.version>1.1.3</oa4mp.version>
         <antrun.version>1.8</antrun.version>
         <bouncy.castle.version>1.56</bouncy.castle.version>
-        <jglobus.version>2.1.0</jglobus.version>
         <ebay.cors.filter>1.0.0</ebay.cors.filter>
         <thrift.version>0.10.0</thrift.version>
         <mysql.connector.version>5.1.34</mysql.connector.version>
@@ -118,7 +113,14 @@
         <commons.io.version>2.4</commons.io.version>
         <google.guava.version>20.0</google.guava.version>
         <jacoco.version>0.8.1</jacoco.version>
-        <openjpa.version>2.4.3</openjpa.version>
+        <openjpa.version>3.1.0</openjpa.version>
+        <dozer.version>5.4.0</dozer.version>
+        <javax.annotation.version>1.3.2</javax.annotation.version>
+        <jaxb.version>2.4.0-b180830.0359</jaxb.version>
+        <jmockit.version>1.44</jmockit.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <org.apache.commons.pool2.version>2.7.0</org.apache.commons.pool2.version>
+        <org.apache.custos.version>1.0-SNAPSHOT</org.apache.custos.version>
     </properties>
 
     <developers>
@@ -534,6 +536,27 @@
                 <artifactId>guava</artifactId>
                 <version>${google.guava.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${org.apache.commons.pool2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${org.apache.commons.pool2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.custos</groupId>
+                <artifactId>custos-java-sdk</artifactId>
+                <version>${org.apache.custos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jmockit</groupId>
+                <artifactId>jmockit</artifactId>
+                <version>${jmockit.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -556,26 +579,6 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
-        <repository>
-            <id>wso2</id>
-            <name>Repository</name>
-            <url>https://dist.wso2.org/maven2</url>
-        </repository>
-        <repository>
-            <id>oauth</id>
-            <name>OAuth Repository</name>
-            <url>https://oauth.googlecode.com/svn/code/maven</url>
-        </repository>
-        <repository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>https://maven.wso2.org/nexus/content/groups/wso2-public/</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
         </repository>
     </repositories>
 
@@ -667,9 +670,22 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>3.6.1</version>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <source>11</source>
+                            <target>11</target>
+                        <!--</configuration>-->
+                        <!--&lt;!&ndash;<version>3.8.0</version>&ndash;&gt;-->
+                        <!--<configuration>-->
+
+                            <!--<compilerArgs>-->
+                                <!--<arg>&#45;&#45;add-exports=java.base/sun.security=ALL-UNNAMED</arg>-->
+                            <!--</compilerArgs>-->
+                            <!--<release>11</release>-->
+                            <fork>true</fork>
                         </configuration>
+
+                        <!-- without forking compilation happens in the
+                            same process, so no arguments are applied -->
+
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -683,6 +699,11 @@
                                 tests -->
                             <!-- Integration tests are run using the fail-safe plugin in the module
                                 pom -->
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m -javaagent:${settings.localRepository}/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar</argLine>
+
+                            <reuseForks>false</reuseForks>
+
                             <excludes>
                                 <exclude>**/IT.java</exclude>
                                 <exclude>**/*TestWithMyProxyAuth.java</exclude>
@@ -784,10 +805,13 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.1</version>
+                        <version>3.8.0</version>
                         <configuration>
-                            <source>1.8</source>
-                            <target>1.8</target>
+                            <release>11</release>
+                            <!--<compilerArgs>-->
+                                <!--<arg>&#45;&#45;add-opens=java.base/java.lang=ALL-UNNAMED</arg>-->
+                            <!--</compilerArgs>-->
+                            <!--<fork>true</fork>-->
                         </configuration>
                     </plugin>
                     <plugin>
